--- a/jogoJs.html
+++ b/jogoJs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Meu jogo</title>
+	<title>JogoJS</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -38,15 +38,31 @@
 			altura:50,
 			largura:50,
 			cor:"#ff4e4e",
+			gravidade:1.5,
+			velocidade:0,
+			forcaPulo: 15,
+
+			atualiza:function(){
+				this.velocidade+=this.gravidade;
+				this.y += this.velocidade;
+
+				if(this.y>chao.y-this.altura){
+					this.y = chao.y - this.altura;
+				}
+			},
 
 			desenha:function(){
 				ctx.fillStyle = this.cor;
 				ctx.fillRect(this.x, this.y, this.largura, this.altura);
+			},
+
+			pulo: function(){
+				this.velocidade = -this.forcaPulo;
 			}
 		};
 
 		function clique(event){
-			alert("clicado!")
+			bloco.pulo()
 		}
 
 		function main(){
@@ -81,6 +97,8 @@
 
 		function atualiza(){
 			frames++;
+
+			bloco.atualiza();
 		}
 
 		function desenha (){
